--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1 class="text-center">Hello</h1>
+  <h1 class="text-center">Hello n Welcome to simple calculator designed by Satish Yadav</h1>
   <div class="container flex flex-col items-center mx-auto m-w-20">
     <div class="row">
       <input class="input" type="text"/>
